samples/_failures_safe/1761428320_b3a525_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d204e159.c: In function ‘main’:
./samples/SAFE/__tmp_d204e159.c:174:5: error: expected expression at end of input
  174 |     for (int i = 0;
      |     ^~~
./samples/SAFE/__tmp_d204e159.c:174:5: error: expected declaration or statement at end of input
